# ai-dj-v4

./: .gitignore  CLAUDE.md  GITHUB_READY.md  IMPLEMENTATION_SUMMARY.md  KAGGLE_SETUP.md  MANIFEST_ACCESS.md  QUICK_REFERENCE.md  README.md  STEP7_GUIDE.md  hp_phase_a.py  hp_phase_b.py  kaggle_phaseB_step6.ipynb  kaggle_phaseB_step6_gpu_optimized.ipynb  kaggle_phaseB_step6_retry.ipynb  kaggle_phaseB_step6c_only.ipynb  kaggle_phaseB_step7.ipynb  kaggle_phaseB_step7_all65.ipynb  kaggle_phaseB_step7_resumable.ipynb  kaggle_phase_b.ipynb  kaggle_phase_c.ipynb  pyproject.toml  requirements.txt  setup_hp_mint.sh  upload_to_hf.py
aidj/: analyzer.py  assembler.py  camelot.py  config.py  mixer.py  preprocessor.py  selector.py  transition.py
aidj/curves/: eq_filters.py  optimizer.py  stem_curve_extractor.py
aidj/data/: aligner.py  beat_detector.py  downloader.py  helpers.py  residual.py  subset_selector.py  transition_extractor.py  tsm.py
aidj/model/: architecture.py  (+3 more)
data/: manifest_100mix.json  manifest_100mix_part1.json  manifest_100mix_part2.json  manifest_1mix.json  manifest_2mix.json  manifest_50mix.json  manifest_training_all_available.json  manifest_training_all_available_part1.json  manifest_training_all_available_part2.json
scripts/: 01_select_subset.py  02_download_audio.py  03_detect_beats.py  04_align_tracks.py  05_extract_transitions.py  06_separate_stems.py  06b_compute_residuals.py  07_extract_stem_curves.py  08_build_dataset.py  09_train.py  10_evaluate.py  11_generate_mix.py  create_training_manifest.py  split_manifest.py  split_training_manifest.py
(+2 files in other folders)
